# c2-server

./: .example.env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  countriesCoordinates.json  dropper_script.ino
assets/: 76bf99a8-4ef8-4bbe-afb1-b76b40495c82.yuv
docker-compose/: docker_compose.yaml  production.env
migrations/2022-05-16-112114_add_users/: up.sql
migrations/2022-05-17-110026_add_implants/: down.sql  up.sql
migrations/2022-05-19-120201_add_tasks/: up.sql
migrations/2022-05-19-121507_add_results/: down.sql  up.sql
migrations/2022-06-24-182455_create_plain_results/: down.sql  up.sql
src/: errors.rs  main.rs  schema.rs
src/db/: connect.rs
src/handlers/: auth_handler.rs  coordinates_handler.rs  exchange_handler.rs  implant_file_handler.rs  implant_handler.rs  mod.rs  ping_handler.rs  result_handler.rs  task_handler.rs
src/models/: coordinates.rs  exchange.rs  exchange_model.rs  implant.rs  mod.rs  plain_result.rs  screenshot.rs  task.rs  user.rs
src/utils/: argon2.rs  mod.rs  network_encryption.rs  parse_countries.rs  shell.rs  x25519.rs
