[package]
name = "c2-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = "0"
actix-cors = "0"
diesel = {version = "1.4.4", features = ["postgres","uuidv07", "r2d2", "chrono"]}
r2d2 = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
dotenv = "0"
chrono = { version = "0", features = ["serde"] }
x25519-dalek = "1"
rand = { version = "0.7", features = ["getrandom"] }
rand_core = "0.5"
blake3 = "1"
chacha20poly1305 = "0"
base64 = "0"
argon2 = "0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
thiserror = "1"
jsonwebtoken = "8"
arrayvec = "0"
